--- a/forever/www/order/css/website.css
+++ b/forever/www/order/css/website.css
@@ -1,4 +1,4 @@
-.body {
+body {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,7 +12,7 @@ a{
     text-decoration: none;
 }
 
-.container_d {
+.container {
     width: 600px;
     text-align: center;
     background-color: #f8b19924;
@@ -22,15 +22,20 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position:relative;
 }
 
 .logo {
     margin-top: 20px;
   
 }
+.home-logo{
+            margin-top: -180px;
+    padding-bottom: 90px;
+}
 
 .logo img {
-    width: 80px;
+    width: 270px;
     height: auto;
 }
 
@@ -43,15 +48,15 @@ a{
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 15px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 12px;
     padding: 35px 24px 24px 24px;
 }
 
 
 .card {
     background-color: #f8f8f8b8;
-    padding: 20px 40px;
+    padding: 14px 5px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -61,16 +66,16 @@ a{
 }
 
 .card img {
-    width: 40px;
+    width: 35px;
     height: auto;
     margin-bottom: 10px;
 }
 
 .card p {
-    font-size: 16px;
+    font-size: 15px;
     color: #333333;
     margin: 0;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 h2 {
@@ -105,6 +110,7 @@ h2 {
     font-size: 16px;
     color: #333;
     padding-right: 8px;
+    font-weight: 400;
 }
 
 .notice-date {
@@ -239,7 +245,7 @@ h2 {
 .box {
     border: 1px solid #ccc;
     overflow: hidden;
-    text-align: center;
+    /*text-align: center;*/
     background-color: #fff;
 }
 
@@ -253,16 +259,19 @@ h2 {
     display: -webkit-flex;
     justify-content: space-between;
     -webkit-justify-content: space-between;
-    align-items: center;
-    -webkit-align-items: center;
-    padding: 10px;
-    background: #f9f9f9;
+    padding: 5px;
+    background: #fff;
 }
 
-.title {
-    font-size: 14px;
+.box-footer .title {
+font-size: 12px !important;
     color: #333;
-    font-weight: 600;
+    font-weight: 400;
+    width: 90%;
+    text-align: left;
+}
+.box-footer a{
+    width:9%;
 }
 
 .download-icon {
@@ -275,7 +284,12 @@ h2 {
 
 /* credit */
 .credit{
-    font-size: 13px;
+        font-size: 13px;
+    position: absolute;
+    bottom: 10px;
+    right: 0;
+    margin: auto;
+    left: 0;
 }
 
 .credit a{
@@ -283,12 +297,12 @@ h2 {
 }
 
 /* order */
-.input-container_d {
+.input-container {
     margin: 20px 0;
     padding: 0 20px; /* Add padding to match overall design */
 }
 
-.input-container_d label {
+.input-container label {
     display: block;
     font-size: 16px;
     color: #333;
@@ -376,6 +390,10 @@ button:hover {
 .back-button:hover {
     text-decoration: none;
 }
+      .creditt{
+        font-size: 12px;
+        padding-bottom: 10px;
+    }
 
 
 
@@ -397,7 +415,35 @@ button:hover {
         font-size: 12px;
         padding-bottom: 10px;
     }
+      .creditt{
+        font-size: 12px;
+        padding-bottom: 10px;
+    }
+    .logo img {
+    width: 240px;
+    height: auto;
 }
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px 13px;
+    padding: 35px 24px 95px 24px;
+}
+.home-logo{
+        padding-bottom: 45px;
+        margin-top: -80px;
+}
+.credit {
+    font-size: 13px;
+    position: absolute;
+    bottom: 35px;
+    right: 0;
+    margin: auto;
+    left: 0;
+}
+}
+
+
 .navbar {
 
     display: none;
@@ -405,18 +451,4 @@ button:hover {
 .web-footer {
 
     display: none;
-}
-.container {
-
-    width: 100%;
-    padding-right: 0px !important;
-    padding-left: 0px !important;
-    margin-right: auto;
-    margin-left: auto;
-}
-@media (max-width: 992px) {
-    .page-content-wrapper .container {
-        padding-left: 0px !important;
-        padding-right: 0px !important;
-    }
 }
