--- a/forever/www/order/css/new-home.css
+++ b/forever/www/order/css/new-home.css
@@ -1,3 +1,268 @@
+
+.logo {
+    margin-top: 20px;
+    text-align: center;
+    padding-bottom: 10%;
+  
+}
+.home-logo{
+            margin-top: -180px;
+    padding-bottom: 90px;
+}
+
+.logo img {
+    width: 270px;
+    height: auto;
+}
+
+.logo p {
+    font-size: 18px;
+    font-weight: bold;
+    color: #8b8b8b;
+    margin: 10px 0 0;
+}
+.ffo{
+    position: absolute;
+    bottom: 0;
+    margin: auto;
+    left: 0;
+    right: 0;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 12px;
+    padding: 35px 24px 24px 24px;
+}
+
+
+.card {
+    background-color: #f8f8f8b8;
+    padding: 14px 5px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.card img {
+    width: 35px;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.card p {
+    font-size: 15px;
+    color: #333333;
+    margin: 0;
+    font-weight: 400;
+}
+
+2 {
+
+    margin-bottom: 0;
+    margin-top: 35px;
+    font-size: 24px;
+    color: #333;
+}
+
+.notice-list {
+    list-style: none;
+    padding:0 15px;
+    margin: 20px 0;
+}
+
+.notice-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    text-align: left;
+    background-color: #f8f8f8b8;
+    padding: 25px 15px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    counter-increment: notice-counter;
+}
+
+.notice-info h4 {
+    margin: 0;
+    font-size: 16px;
+    color: #333;
+    padding-right: 8px;
+    font-weight: 400;
+}
+
+.notice-date {
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+}
+
+.notice-date img {
+    width: 16px; 
+    height: auto;
+    margin-right: 5px;
+}
+.notice-info h4::before {
+    content: counter(notice-counter) ". ";
+    font-weight: bold;
+    margin-right: 8px;
+    color: #333;
+}
+
+.notice-info a{
+    color: #333;
+}
+
+.notice-date p {
+    margin: 0;
+    font-size: 12px;
+    color: #888;
+}
+
+.view-button {
+    padding: 6px 15px;
+    background-color: #a9a500;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.view-button:hover {
+    background-color: #FFD100;
+}
+
+/* Popup Styles */
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 500px;
+    position: relative;
+}
+
+.popup-content img {
+    width: 100%;
+}
+
+.close {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    font-size: 24px;
+    cursor: pointer;
+    color: #333;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 14px;
+}
+
+.close:hover {
+    color: #ff0000;
+}
+
+.brand {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    padding: 35px 15px 24px 15px;
+}
+
+.brand .card {
+    background-color: #f8f8f8b8;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.brand .card img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 0px;
+}
+.brand button{
+    border: 0px solid #fff;
+    cursor: pointer;
+    background: transparent;
+}
+.back button{
+    background-color: #a9a500;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.back a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.box {
+    border: 1px solid #ccc;
+    overflow: hidden;
+    /*text-align: center;*/
+    background-color: #fff;
+}
+
+.box img {
+    width: 100%;
+    height: auto;
+}
+
+.box-footer {
+    display: flex;
+    display: -webkit-flex;
+    justify-content: space-between;
+    -webkit-justify-content: space-between;
+    padding: 5px;
+    background: #fff;
+}
+
+.box-footer .title {
+font-size: 12px !important;
+    color: #333;
+    font-weight: 400;
+    width: 90%;
+    text-align: left;
+}
+.box-footer a{
+    width:9%;
+}
+
+.download-icon {
+    height: 20px !important;
+}
+
+.download-icon:hover {
+    color: #007BFF; 
+}
+
 body {
     margin: 0;
     color: #6a6f8c;
@@ -5,13 +270,6 @@ body {
     font: 400 16px/18px 'Open Sans', sans-serif;
     background-size: cover;
     background-repeat: no-repeat;
-}
-
-.mt-4, .my-4 {
-    margin-top: 0rem !important;
-}
-.my-4 {
-    margin-bottom: 0rem !important;
 }
 
 *,
@@ -43,7 +301,7 @@ a {
     min-height: 100vh;
     position: relative;
     background:#f8b19924;
-    box-shadow: -6px 10px 24px 0px rgba(0, 0, 0, 0.1);
+    /* box-shadow: -6px 10px 24px 0px rgba(0, 0, 0, 0.1); */
     overflow-y: scroll;
 }
 
@@ -51,7 +309,7 @@ a {
     width: 100%;
     height: 100vh;
     position: absolute;
-    padding: 18px 22px 13px 22px;
+    padding: 18px 0px 13px 0px;
     /* background: #f8b19924; */
     display: flex;
     flex-direction: column;
@@ -64,6 +322,36 @@ a {
     position: relative;
     perspective: 1000px;
     transform-style: preserve-3d;
+    display: flex;
+    flex-direction: column;
+
+
+}
+
+.login-form h2{
+    margin-bottom: 0px;
+    margin-top: 0px;
+    font-size: 24px;
+    color: #333;
+    text-align: center;
+}
+
+.back{
+    text-align: center;
+}
+
+.back button{
+    background-color: #a9a500;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.back a{
+    text-decoration: none;
+    color: #fff;
 }
 
 .login-form .group {
@@ -398,9 +686,6 @@ color: #404040;
     .credit {
         font-weight: 400;
         text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         padding-top: 10px;
         font-size: 14px;
         color: #404040;
@@ -597,8 +882,34 @@ margin-top: -15px;
 padding-bottom:15px;
 
 }
+.mt-4, .my-4 {
+    margin-top: 0rem !important;
+}
+.my-4 {
+    margin-bottom: 0rem !important;
+}
 
 @media(max-width:650px) {
+    .mt-4, .my-4 {
+        margin-top: 0rem !important;
+    }
+    .my-4 {
+        margin-bottom: 0rem !important;
+    }
+    .container {
+        width: 100%;
+        padding-right: 0px !important;
+        padding-left: 0px !important;
+        margin-right: 0px !important;
+        margin-left: 0px !important;
+    }
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 12px;
+        padding: 35px 15px 24px 15px;
+    }
+
     .login-wrap {
         min-height: 100vh;
         margin-top: 0vh;
