--- a/forever/www/order/css/new-home.css
+++ b/forever/www/order/css/new-home.css
@@ -41,7 +41,6 @@
     background-color: #f8f8f8b8;
     padding: 14px 5px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -61,13 +60,13 @@
     font-weight: 400;
 }
 
-2 {
+/* 2 {
 
     margin-bottom: 0;
     margin-top: 35px;
     font-size: 24px;
     color: #333;
-}
+} */
 
 .notice-list {
     list-style: none;
@@ -232,7 +231,8 @@
 
 .box img {
     width: 100%;
-    height: auto;
+    height: 88%;
+    object-fit: contain;
 }
 
 .box-footer {
